# klashnikov

./: .gitignore  README.md  default.nix  klashnikov.cabal  klashnikov.nix  klashnikov.yaml  stack.yaml
app/: Core.hs  Main.hs  Types.hs
app/Etcd/: Backends.hs  Indices.hs
app/Klashnikov/: Config.hs
src/Klashnikov/: Config.hs
test/: Spec.hs
