name:                klashnikov
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/rlupton20/klashnikov#readme
license:             GPL-3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Richard Lupton
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Lib
                     , Klashnikov.Config
  other-modules:       Lib.Prelude
  build-depends:       base >= 4.7 && < 5
                     , protolude >= 0.1.6 && < 0.2
                     , yaml
                     , text
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

executable klashnikov-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , klashnikov
                     , protolude >= 0.1.6 && < 0.2
                     , wai
                     , warp
                     , http-types
                     , concurrent-stack
                     , http-reverse-proxy
                     , http-client
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

test-suite klashnikov-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , klashnikov
                     , protolude >= 0.1.6 && < 0.2
                     , yaml
                     , text
                     , test-framework
                     , test-framework-hunit
                     , HUnit
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

source-repository head
  type:     git
  location: https://github.com/rlupton20/klashnikov
