name:                klashnikov
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/rlupton20/klashnikov#readme
license:             GPL-3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Richard Lupton
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Lib.Prelude
--  other-modules:       Lib.Prelude
  build-depends:       base >= 4.9 && < 5
                     , protolude >= 0.1.6 && < 0.2
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

executable klashnikov-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Core
                     , Types
                     , Etcd.Backends
                     , Etcd.Indices
                     , Klashnikov.Config
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , klashnikov
                     , protolude >= 0.1.6 && < 0.2
                     , wai
                     , warp
                     , http-types
                     , concurrent-stack
                     , tree-threads
                     , http-reverse-proxy
                     , http-client
                     , haskell-etcd
                     , mtl
                     , text
                     , aeson
                     , yaml
                     , tyro
                     , stm
                     , vector
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

test-suite klashnikov-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, app
  main-is:             Spec.hs
  build-depends:       base
                     , klashnikov
                     , protolude >= 0.1.6 && < 0.2
                     , aeson
                     , mtl
                     , yaml
                     , text
                     , test-framework
                     , test-framework-hunit
                     , HUnit
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

source-repository head
  type:     git
  location: https://github.com/rlupton20/klashnikov